--- a/vsnips/package.json
+++ b/vsnips/package.json
@@ -10,6 +10,12 @@
           "lua"
         ],
         "path": "./snippets/common.json"
+      },
+      {
+        "language": [
+          "rust"
+        ],
+        "path": "./snippets/rust.json"
       }
     ]
   }
